# az-ocr-scanner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
infrastructure/: az-ocr-scanner-plan  main.tf  post-apply.ps1  post-apply.sh  variables.tf
src/: __init__.py  env_vars.py  field_extraction.py  gpt_enhancement.py  main_pipeline.py  ocr_processing.py  query_answering.py
